// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 jveJdC Inline__InlineWrapper-sc-1lksbyc-0 gxACih"
  height={null}
  id="Standard"
  overflow={null}
  width={null}
>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 dhZQSK"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </span>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 dhZQSK"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 222222"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 222222
      </label>
    </span>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 dhZQSK"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </span>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 dhZQSK"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 444444444444444444"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 444444444444444444
      </label>
    </span>
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "width": "15em",
    }
  }
>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 jveJdC Inline__InlineWrapper-sc-1lksbyc-0 gxACih"
    height={null}
    id="Spacing Content"
    overflow={null}
    width={null}
  >
    <div
      className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
    >
      <span
        className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
        id={null}
        label="Tag 1"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag 1
        </label>
      </span>
    </div>
    <div
      className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
    >
      <span
        className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
        id={null}
        label="Tag 222222"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag 222222
        </label>
      </span>
    </div>
    <div
      className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
    >
      <span
        className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
        id={null}
        label="Tag 33333333333"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag 33333333333
        </label>
      </span>
    </div>
    <div
      className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
    >
      <span
        className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
        id={null}
        label="Tag 444444444444444444"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag 444444444444444444
        </label>
      </span>
    </div>
  </div>
</div>
`;

exports[` 3`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 jYGYvv Inline__InlineWrapper-sc-1lksbyc-0 gxACih"
  height={null}
  id="Center Justify"
  overflow={null}
  width={null}
>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </span>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 222222"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 222222
      </label>
    </span>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </span>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 444444444444444444"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 444444444444444444
      </label>
    </span>
  </div>
</div>
`;

exports[` 4`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 cIctzJ Inline__InlineWrapper-sc-1lksbyc-0 gxACih"
  height={null}
  id="Right Justify"
  overflow={null}
  width={null}
>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </span>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 222222"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 222222
      </label>
    </span>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </span>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 444444444444444444"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 444444444444444444
      </label>
    </span>
  </div>
</div>
`;

exports[` 5`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 jveJdC Inline__InlineWrapper-sc-1lksbyc-0 gxACih"
  height={null}
  id="Center (Default) Align"
  overflow={null}
  width={null}
>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </span>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 fHwjBj Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_271"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 kgBfBF"
        id={null}
        onClick={null}
      >
        <div
          style={
            Object {
              "width": "10em",
            }
          }
        >
          Different size in content
        </div>
      </section>
    </div>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </span>
  </div>
</div>
`;

exports[` 6`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 cDSqkr Inline__InlineWrapper-sc-1lksbyc-0 gxACih"
  height={null}
  id="Top Align"
  overflow={null}
  width={null}
>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </span>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 fHwjBj Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_272"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 kgBfBF"
        id={null}
        onClick={null}
      >
        <div
          style={
            Object {
              "width": "10em",
            }
          }
        >
          Different size in content
        </div>
      </section>
    </div>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </span>
  </div>
</div>
`;

exports[` 7`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 dZABag Inline__InlineWrapper-sc-1lksbyc-0 gxACih"
  height={null}
  id="Bottom Align"
  overflow={null}
  width={null}
>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </span>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 fHwjBj Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_273"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 kgBfBF"
        id={null}
        onClick={null}
      >
        <div
          style={
            Object {
              "width": "10em",
            }
          }
        >
          Different size in content
        </div>
      </section>
    </div>
  </div>
  <div
    className="Inline__InlineItem-sc-1lksbyc-1 kVZDrc"
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 jVuXoC"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 cktxCj"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </span>
  </div>
</div>
`;
